crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_gemma_simple.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: out
---
<start_of_turn>user
Tell me a joke.<end_of_turn>
<start_of_turn>model
