crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_instruct_render_chat_single.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: out
---
Q: What is 2+2?
A:
