crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_instruct_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: out
---
System: You are a math tutor.

Q: What is 2+2?
A:
