crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_llama3_render_chat_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: out
---
<|begin_of_text|><|start_header_id|>system<|end_header_id|>

You are a programming assistant.<|eot_id|><|start_header_id|>user<|end_header_id|>

Hello<|eot_id|><|start_header_id|>assistant<|end_header_id|>

Hi there!<|eot_id|><|start_header_id|>user<|end_header_id|>

What is Rust?<|eot_id|><|start_header_id|>assistant<|end_header_id|>
