crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_llama3_simple.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: out
---
<|begin_of_text|><|start_header_id|>user<|end_header_id|>

What is the capital of France?<|eot_id|><|start_header_id|>assistant<|end_header_id|>
