crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_llama3_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: out
---
<|begin_of_text|><|start_header_id|>system<|end_header_id|>

You are a science teacher.<|eot_id|><|start_header_id|>user<|end_header_id|>

Explain gravity.<|eot_id|><|start_header_id|>assistant<|end_header_id|>
