crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_mistral_simple.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: out
---
<s>[INST] How does Rust work? [/INST]
