crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_phi4_simple.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: out
---
<|im_start|>system
You are a helpful assistant.<|im_end|>
<|im_start|>user
Summarize this text.<|im_end|>
<|im_start|>assistant
