crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_phi4_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: out
---
<|im_start|>system
Be concise.<|im_end|>
<|im_start|>user
Summarize.<|im_end|>
<|im_start|>assistant
