crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_prompt_template_builder_debug.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: tmpl
---
PromptTemplate {
    template_type: Llama3Chat,
    system_prompt: Some(
        "You are helpful.",
    ),
    conversation_history: [],
}
